force-app/main/default/objects/Product2/fields/Short_Fall_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Short_Fall_Instructions__c</fullName>
    <label>Short Fall Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>