force-app/main/default/objects/Product2/fields/Suitable_For__c.field-meta.xml
<CustomField>
    <fullName>Suitable_For__c</fullName>
    <label>Suitable For</label>
    <length>100</length>
    <type>Text</type>
</CustomField>