force-app/main/default/objects/Product2/fields/Summary_Page_What_You_ll_Get__c.field-meta.xml
<CustomField>
    <fullName>Summary_Page_What_You_ll_Get__c</fullName>
    <label>Summary Page What You’ll Get</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>