force-app/main/default/objects/Product2/fields/Surplus_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Instructions__c</fullName>
    <label>Surplus Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>