force-app/main/default/objects/Product2/fields/Top_Up__c.field-meta.xml
<CustomField>
    <fullName>Top_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Up</label>
    <type>Checkbox</type>
</CustomField>