force-app/main/default/objects/Product2/fields/Top_Up_Details__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Details__c</fullName>
    <label>Top Up Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>