force-app/main/default/objects/Product2/fields/Variation_to_contract_fee__c.field-meta.xml
<CustomField>
    <fullName>Variation_to_contract_fee__c</fullName>
    <label>Variation to contract fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>