force-app/main/default/objects/Product2/fields/What_document_needs_to_apply__c.field-meta.xml
<CustomField>
    <fullName>What_document_needs_to_apply__c</fullName>
    <label>What document needs to apply</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>