force-app/main/default/objects/Product2/listViews/Home_Improvement.listView-meta.xml
<ListView>
    <fullName>Home_Improvement</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Acceptable_Loan_Purpose__c</columns>
    <columns>Lender__c</columns>
    <columns>Product_Order__c</columns>
    <columns>Interest_Rate__c</columns>
    <columns>Actual_Comparison_Rate__c</columns>
    <columns>Interest_Rate_From__c</columns>
    <columns>Total_Setup_Fees__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Default_Loan_Term__c</columns>
    <columns>Minimum_Loan_Amount__c</columns>
    <columns>Maximum_Loan_Amount__c</columns>
    <columns>Is_Feature_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Acceptable_Loan_Purpose__c</field>
        <operation>equals</operation>
        <value>Home Improvement</value>
    </filters>
    <label>Home Improvement</label>
</ListView>